# nft

./: .gitignore  README.md
backend/: .env.example  docker-compose.yml  package-lock.json  package.json
backend/prisma/: schema.prisma  seed.ts
backend/src/: index.ts
backend/src/api/: activity.ts  collections.ts  contractActions.ts  discovery.ts  listings.ts  nfts.ts  stats.ts  upload.ts  users.ts
backend/src/indexer/: eventProcessor.ts  index.ts
backend/src/lib/: prisma.ts
backend/src/middleware/: errorHandler.ts
backend/src/services/: contractMock.ts  contractReal.ts  contracts.ts
contracts/: Cargo.toml
contracts/collection-factory/: Cargo.toml
contracts/collection-factory/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/cw721-base/: Cargo.toml
contracts/cw721-base/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
contracts/marketplace/: Cargo.toml
contracts/marketplace/src/: contract.rs  error.rs  lib.rs  msg.rs  state.rs
frontend/: .env.example  next.config.js  package-lock.json  package.json  tailwind.config.ts
frontend/app/: globals.css  layout.tsx  page.tsx
frontend/app/activity/: page.tsx
frontend/app/collection/[address]/: page.tsx
frontend/app/collections/: page.tsx
frontend/app/create/: page.tsx
frontend/app/explore/: page.tsx
frontend/app/nft/[contract]/[tokenId]/: page.tsx
frontend/app/profile/[address]/: page.tsx
frontend/components/: cosmos-providers.tsx  providers.tsx
frontend/components/home/: featured-drops.tsx  hero-section.tsx  recent-listings.tsx  stats-section.tsx  trending-collections.tsx
frontend/components/layout/: footer.tsx  header.tsx
frontend/components/ui/: button.tsx  collection-card.tsx  nft-card.tsx  search-bar.tsx  toaster.tsx
frontend/components/wallet/: wallet-button.tsx
frontend/hooks/: useContract.ts
frontend/lib/: api.ts  contracts.ts  mockWalletContext.tsx  store.ts  utils.ts  walletAddressContext.tsx
scripts/: deploy.sh
