[package]
name = "nibiru-collection-factory"
version.workspace = true
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Collection factory contract for deploying new NFT collections on Nibiru Chain"

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
library = []

[dependencies]
cosmwasm-std.workspace = true
cosmwasm-schema.workspace = true
cw-storage-plus.workspace = true
cw2.workspace = true
schemars.workspace = true
serde.workspace = true
thiserror.workspace = true

[dev-dependencies]
cosmwasm-vm = "1.5"
